with drop down list

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -61,4 +61,7 @@ dependencies {
     // dexter runtime permissions
     implementation 'com.karumi:dexter:5.0.0'
 
+    // spinner
+//    implementation 'com.weiwangcn.betterspinner:library-material:1.1.0'
+
 }
