--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,39 +25,58 @@ android {
         exclude 'META-INF/proguard/androidx-annotations.pro'
     }
 }
-
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.android.support:support-v4:28.0.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
-    implementation('com.mikepenz:materialdrawer:6.0.9@aar') {
-        transitive = true
-    }
-    implementation 'com.squareup.picasso:picasso:2.71828'
-    // ButterKnife
-    implementation 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    implementation('com.mikepenz:materialdrawer:6.0.9@aar') { transitive = true }
+
+    //UI
+    implementation 'com.github.florent37:materialtextfield:1.0.7'
+    implementation 'com.github.arcadefire:nice-spinner:1.3.4'
+    implementation 'com.getbase:floatingactionbutton:1.10.1'
+    implementation 'com.github.GrenderG:Toasty:1.3.0'
+    implementation 'com.github.Shashank02051997:FancyAlertDialog-Android:0.1'
+    implementation 'com.stepstone.apprating:app-rating:2.3.0'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.orhanobut:dialogplus:1.11@aar'
+
+
+    implementation 'com.daimajia.easing:library:2.0@aar'
+    implementation 'com.daimajia.androidanimations:library:2.3@aar'
+
+    //ButterKnife
+    implementation 'com.jakewharton:butterknife:9.0.0-rc1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc1'
+
     // Dagger
     implementation 'com.google.dagger:dagger:2.17'
     implementation 'com.google.dagger:dagger-android:2.17'
     implementation 'com.google.dagger:dagger-android-support:2.17'
     annotationProcessor "com.google.dagger:dagger-compiler:2.17"
     annotationProcessor "com.google.dagger:dagger-android-processor:2.17"
+
     // ReactiveX
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.1'
+
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+
     // Testing
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support:support-annotations:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
     testImplementation 'org.mockito:mockito-core:2.22.0'
 
     //Preferences
@@ -71,4 +90,12 @@ dependencies {
 
     // validation
     implementation 'com.mobsandgeeks:android-saripaar:2.0.3'
+
+    // camera
+//    implementation 'com.github.chrisbanes:PhotoView:2.1.4'
+//    implementation 'com.github.jkwiecien:EasyImage:1.3.1'
+//    implementation files('libs/activation.jar')
+//    implementation files('libs/additionnal.jar')
+//    implementation files('libs/mail.jar')
+
 }
