--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,17 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.beertag.android">
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+
+    package="com.beertag.android">
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS_FULL" android:protectionLevel="signature"
+         />
+
+    <uses-feature
+        android:name="android.hardware.camera.any"
+        android:required="true" />
+    <uses-feature
+        android:name="android.hardware.camera.autofocus"
+        android:required="false" />
 
     <application
-            android:name=".BeerTagApplication"
-            android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
-            android:label="BEER TAG"
-            android:roundIcon="@mipmap/ic_launcher_round"
-            android:supportsRtl="true"
-            android:theme="@style/AppTheme"
-            android:configChanges="orientation|screenSize|keyboardHidden">
+        android:name=".BeerTagApplication"
+        android:allowBackup="true"
+
+        android:hardwareAccelerated="false"
+        android:icon="@mipmap/ic_launcher"
+        android:label="BEER TAG"
+        android:largeHeap="true"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning"
+        android:configChanges="orientation|screenSize|keyboardHidden">
+
         <activity android:name=".views.beersList.BeersListActivity"
                   android:screenOrientation="portrait">
             <intent-filter>
@@ -23,20 +46,16 @@
 
         <activity android:name=".views.beerDetails.BeerDetailsActivity"
                   android:screenOrientation="portrait"/>
+        <activity android:name=".views.image.ImageViewActivity"
+            android:screenOrientation="portrait"/>
         <activity android:name=".views.beerCreate.BeerCreateActivity"
                   android:screenOrientation="portrait"/>
-        <activity android:name=".views.Login.LoginActivity"
+        <activity android:name=".views.login.LoginActivity"
                   android:screenOrientation="portrait"/>
-
-        <provider
-                android:name="android.support.v4.content.FileProvider"
-                android:authorities="${applicationId}.provider"
-                android:exported="false"
-                android:grantUriPermissions="true">
-            <meta-data
-                    android:name="android.support.FILE_PROVIDER_PATHS"
-                    android:resource="@xml/file_paths"/>
-        </provider>
+        <activity android:name=".views.getPicture.GetPictureActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".views.home.HomeActivity"
+            android:screenOrientation="portrait"/>
 
     </application>
 
